src/modal-checkout/checkout.scss
#newspack_modal_checkout {
	padding: 24px;
	h3 {
		font-size: 16px;
		margin: 24px 0 16px;
	}
	.woocommerce-message,
	.woocommerce-error,
	.woocommerce-info {
		border-radius: 6px;
	}
	input[type='text'],
	input[type='email'],
	input[type='tel'],
	input[type='number'],
	input[type='password'],
	input[type='submit'],
	select,
	textarea {
		border-radius: 6px;
		padding: 12px 16px;
		font-size: 14px;
		line-height: 24px;
	}
	#customer_details {
		.woocommerce-billing-fields {
			p {
				margin: 8px 0 24px;
			}
			label {
				font-size: 14px;
				line-height: 20px;
				font-weight: 600;
				margin-bottom: 8px;
			}
		}
	}
	#payment {
		.wc_payment_method {
			border: 1px solid #ddd;
			border-radius: 6px;
			padding: 16px;
			margin: 0 0 16px;
			font-size: 14px;
			line-height: 20px;
			> label {
				font-weight: 600;
			}
			&.selected {
				background-color: #f5fdff;
				border-color: #3366ff;
			}
			input.input-radio[name='payment_method'] + label::before {
				box-shadow: 0 0 0 1px #dddddd;
			}
			input.input-radio[name='payment_method']:checked + label::before {
				background: #3366ff;
				box-shadow: 0 0 0 1px #3366ff;
			}
			.payment_box {
				font-size: 14px;
				line-height: 20px;
				padding: 0;
				background: transparent;
				margin: 16px 0 0;
			}
			> label:first-of-type {
				margin: 0;
			}
		}
		.woocommerce-SavedPaymentMethods-saveNew {
			display: flex;
			align-items: center;
			margin-top: 16px;
			input {
				margin-right: 8px;
			}
		}
		#place_order {
			background-color: var( --newspack-theme-color-primary );
			font-size: 14px;
			font-weight: 600;
			display: block;
			width: 100%;
		}
	}
	#order_review {
		padding: 16px 24px;
		border-radius: 6px;
		background: #f6f7f7;
		table {
			font-size: 14px; // Prevent relative font size
			line-height: 24px;
			border: 0;
			margin: 0;
			th,
			td {
				font-size: 14px; // Prevent relative font size
				padding: 4px 0;
				border-color: #dddddd;
				white-space: nowrap;
				vertical-align: top;
			}
			th {
				background-color: inherit;
				font-weight: 600;
				text-align: left;
			}
			th:first-child {
				width: 100%;
			}
			tr.cart-subtotal {
				th {
					font-weight: normal;
				}
			}
			tr.recurring-totals {
				th {
					padding-top: 24px;
				}
			}
			tfoot tr:last-child {
				th,
				td {
					border-bottom: 0;
				}
			}
		}
	}
	.woocommerce-privacy-policy-text {
		font-size: 14px;
		line-height: 20px;
		color: #757575;
	}
	/* Hide reCAPTCHA badge */
	.grecaptcha-badge {
		visibility: hidden !important;
	}
}

